feat(factory): create enemy factories