@@ -10,6 +10,7 @@ import my.fbk.npc.Rooms.BossRoom;
 import my.fbk.npc.Rooms.SafeRoom;
 import my.fbk.npc.myPlayer.Player;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -35,24 +36,24 @@ public class Game {
     }
 
     public void moveNext() {
-        int choice = rand.nextInt(5);
+        int choice = rand.nextInt(3);
         if (choice == 0) {
             currentRoom = new BattleRoom(this);
             battleRoom.setPlayer(player);
             System.out.println("Moved to: " + currentRoom.getClass().getSimpleName());
             battleRoom.battle();
-        } else if (choice == 1 || choice == 3 || choice == 4) {
+        } else if (choice == 1) {
             currentRoom = new SafeRoom(this);
             safeRoom.setPlayer(player);
-            safeRoom.setAllNPC(List.of(
-                    new Peasant(1, 1, 1, 1, 1),
-                    new Guard(1, 1, 1, 1, 1),
-                    new Thief(1, 1, 1, 1, 1),
-                    new Merchant(99999, 1, 1, 1, 1))
+            safeRoom.setAllNPC(Arrays.asList(
+                    new Peasant(rand.nextInt(20), 30, 100, 0, 5),
+                    new Guard(rand.nextInt(100), 300, 100, 10, 50),
+                    new Thief(rand.nextInt(50), 150, 100, 10, 40),
+                    new Merchant(99999, 60, 100, 0, 10))
             );
             System.out.println("Moved to: " + currentRoom.getClass().getSimpleName());
             safeRoom.npcInteraction();
-        } else if (choice == 2) {
+        } else {
             currentRoom = new BossRoom(this);
             bossRoom.setPlayer(player);
             System.out.println("Moved to: " + currentRoom.getClass().getSimpleName());
